@@ -9,6 +9,8 @@
 	* utils/player.css,
 	utils/player.html,
 	utils/player.js: Adjust UI.
+	* utils/player.css,
+	utils/player.js: Adjust UI.
 
 2010-01-05  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
 
